--- a/creditcardgenerator/src/App.css
+++ b/creditcardgenerator/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.split{
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-div{
+  left: 0;
+  background-image: linear-gradient(to bottom right, #041F1B, #380C4A, #3D0F42, #3d174e, #33254E, #271F4F, #411453, #381147, #240D37, #180429, #0d0118, #0a0013);
+  width: 35%;
 }
+
+.right-div{
+  display: flex;
+  right: 0;
+  width: 65%;
+}
+
+/* .card{
+  width: 447px;
+  height: 246px;
+  flex-shrink: 0;
+  border-radius: 10px;
+border: 1px solid #000;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card1{
+  position: absolute;
+  top: 100px;
+  left: 150px;
+  z-index: 2;
+} */
