--- a/creditcardgenerator/src/App.css
+++ b/creditcardgenerator/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 .App{
   display: flex;
 }
@@ -11,7 +13,7 @@
 
 .left-div{
   left: 0;
-  background-image: linear-gradient(to bottom right, #041F1B, #380C4A, #3D0F42, #3d174e, #33254E, #271F4F, #411453, #381147, #240D37, #180429, #0d0118, #0a0013);
+  background-image: linear-gradient(to bottom right, #041F1B, #380C4A, #3D0F42, #3d174e, #33254E, #271F4F, #411453, #381147, #240D37, #180429, #0d0118, #0a0013, #0a0013, #07000c, #000000);
   width: 35%;
 }
 
@@ -21,7 +23,7 @@
   width: 65%;
 }
 
-/* .card{
+.card{
   width: 447px;
   height: 246px;
   flex-shrink: 0;
@@ -32,7 +34,108 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
 .card1{
   position: absolute;
-  top: 100px;
-  left: 150px;
+  background-image: linear-gradient(to bottom right, #693fca, #ae3dd1, #cf8345, #55bcc0, #732d8f );
+  top: 60px;
+  left: 12%;
   z-index: 2;
-} */
+}
+
+.card2{
+  position: absolute;
+  background: rgb(216, 216, 216);
+  top: 350px;
+  left: 20%;
+  z-index: 2;
+}
+
+.card1-logo{
+  display: inline-flex;
+  height: 80px;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.img1{
+  background-color: #fff;
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  margin: 10px 0 0 40px;
+}
+
+.img2{
+  background-image: linear-gradient(to bottom right, #9e3fca, #ae3dd1);
+  border: 1px solid white;
+  margin: 12px 0 0 20px;
+  border-radius: 50%;
+  height: 22px;
+  width: 22px;
+}
+
+.card1-div{
+  height: 146px;
+}
+
+.card-number{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90px;
+  color: #fff;
+  font-size: 30px;
+  letter-spacing: 5px;
+  padding-top: 10px;
+}
+
+.name-date-div{
+  display: flex;
+  color: #fff;
+  font-family: Roboto;
+  justify-content: space-between;
+  letter-spacing: 0.1rem;
+  font-size: 18px;
+  width: 100%;
+}
+
+.cardholder-name{
+    margin-left: 40px;
+}
+
+.expiry-date{
+  margin-right: 50px;
+}
+
+.black-line{
+  margin-top: 25px;
+  width: 100%;
+  height: 60px;
+  background-color: #000;
+}
+
+.cvv-div2{
+  display: flex;
+  width: 100%;
+  height: 85px;
+
+}
+
+.card2-div{
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  background-color: gray;
+  width: 80%;
+  height: 40px;
+  border-radius: 5px;
+}
+
+.cvc{
+  align-items: end;
+  margin-left: 310px;
+  font-size: 18px;
+}
+
+.cardholder-name{
+  text-transform: uppercase;
+}
