--- a/creditcardgenerator/src/App.css
+++ b/creditcardgenerator/src/App.css
@@ -1,8 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
-.App{
-  display: flex;
-}
 
 .split{
     height: 100%;
@@ -124,6 +121,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: end;
   align-items: end;
+  border: 1px solid black;
   background-color: gray;
   width: 80%;
   height: 40px;
@@ -138,4 +136,12 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
 .cardholder-name{
   text-transform: uppercase;
+}
+
+.toast-message {
+  display: block;
+  text-orientation: mixed;
+  color: #fff;
+  width: 34vw;
+  padding: 30px 20px;
 }
